Changed the yellow color to darker shade t o make the text more readable.

--- a/css/agency.css
+++ b/css/agency.css
@@ -1,3 +1,6 @@
+:root {
+  --yellow: #d49e07;
+}
 body {
   overflow-x: hidden;
   font-family: "Roboto Slab", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -6,7 +9,7 @@ body {
   color: #777;
 }
 .text-primary {
-  color: #fed136;
+  color: var(--yellow);
 }
 p {
   font-size: 14px;
@@ -23,7 +26,7 @@ a.active {
   outline: none;
 }
 a {
-  color: #fed136;
+  color: var(--yellow);
 }
 a:hover,
 a:focus,
@@ -52,8 +55,8 @@ h6 {
 }
 .btn-primary {
   color: white;
-  background-color: #fed136;
-  border-color: #fed136;
+  background-color: var(--yellow);
+  border-color: var(--yellow);
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
@@ -87,17 +90,17 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #fed136;
-  border-color: #fed136;
+  background-color: var(--yellow);
+  border-color: var(--yellow);
 }
 .btn-primary .badge {
-  color: #fed136;
+  color: var(--yellow);
   background-color: white;
 }
 .btn-xl {
   color: white;
-  background-color: #fed136;
-  border-color: #fed136;
+  background-color: var(--yellow);
+  border-color: var(--yellow);
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
@@ -134,11 +137,11 @@ fieldset[disabled] .btn-xl:active,
 .btn-xl.disabled.active,
 .btn-xl[disabled].active,
 fieldset[disabled] .btn-xl.active {
-  background-color: #fed136;
-  border-color: #fed136;
+  background-color: var(--yellow);
+  border-color: var(--yellow);
 }
 .btn-xl .badge {
-  color: #fed136;
+  color: var(--yellow);
   background-color: white;
 }
 .navbar-default {
@@ -146,7 +149,7 @@ fieldset[disabled] .btn-xl.active {
   border-color: transparent;
 }
 .navbar-default .navbar-brand {
-  color: #fed136;
+  color: var(--yellow);
   font-family: "Kaushan Script", "Helvetica Neue", Helvetica, Arial, cursive;
 }
 .navbar-default .navbar-brand:hover,
@@ -159,15 +162,15 @@ fieldset[disabled] .btn-xl.active {
   border-color: rgba(255, 255, 255, 0.02);
 }
 .navbar-default .navbar-toggle {
-  background-color: #fed136;
-  border-color: #fed136;
+  background-color: var(--yellow);
+  border-color: var(--yellow);
 }
 .navbar-default .navbar-toggle .icon-bar {
   background-color: white;
 }
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
-  background-color: #fed136;
+  background-color: var(--yellow);
 }
 .navbar-default .nav li a {
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -178,13 +181,13 @@ fieldset[disabled] .btn-xl.active {
 }
 .navbar-default .nav li a:hover,
 .navbar-default .nav li a:focus {
-  color: #fed136;
+  color: var(--yellow);
   outline: none;
 }
 .navbar-default .navbar-nav > .active > a {
   border-radius: 0;
   color: white;
-  background-color: #fed136;
+  background-color: var(--yellow);
 }
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
@@ -413,7 +416,7 @@ section h3.section-subheading {
   height: 80px;
   position: absolute;
   z-index: 100;
-  background-color: #fed136;
+  background-color: var(--yellow);
   color: white;
   border-radius: 100%;
   border: 7px solid #f1f1f1;
@@ -568,7 +571,7 @@ section#contact .form-group textarea.form-control {
   height: 236px;
 }
 section#contact .form-control:focus {
-  border-color: #fed136;
+  border-color: var(--yellow);
   box-shadow: none;
 }
 section#contact ::-webkit-input-placeholder {
@@ -637,7 +640,7 @@ ul.social-buttons li a {
 ul.social-buttons li a:hover,
 ul.social-buttons li a:focus,
 ul.social-buttons li a:active {
-  background-color: #fed136;
+  background-color: var(--yellow);
 }
 .btn:focus,
 .btn:active,
@@ -716,11 +719,11 @@ ul.social-buttons li a:active {
 }
 ::-moz-selection {
   text-shadow: none;
-  background: #fed136;
+  background: var(--yellow);
 }
 ::selection {
   text-shadow: none;
-  background: #fed136;
+  background: var(--yellow);
 }
 img::selection {
   background: transparent;
@@ -729,5 +732,5 @@ img::-moz-selection {
   background: transparent;
 }
 body {
-  webkit-tap-highlight-color: #fed136;
+  webkit-tap-highlight-color: var(--yellow);
 }
