Added less compiler.

--- a/less/agency.less
+++ b/less/agency.less
@@ -230,13 +230,13 @@ section {
 		margin-bottom: 75px;
     }
 }
-
+/*
 @media(min-width:768px) {
 	section {
 		padding: 150px 0;
 	}
 }
-
+*/
 // Services Section
 
 .service-heading {
