--- a/css/agency.css
+++ b/css/agency.css
@@ -1,6 +1,3 @@
-:root {
-  --yellow: #d49e07;
-}
 body {
   overflow-x: hidden;
   font-family: "Roboto Slab", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -9,7 +6,7 @@ body {
   color: #777;
 }
 .text-primary {
-  color: var(--yellow);
+  color: #d49e07;
 }
 p {
   font-size: 14px;
@@ -26,13 +23,13 @@ a.active {
   outline: none;
 }
 a {
-  color: var(--yellow);
+  color: #d49e07;
 }
 a:hover,
 a:focus,
 a:active,
 a.active {
-  color: #fec503;
+  color: #a37905;
 }
 h1,
 h2,
@@ -55,8 +52,8 @@ h6 {
 }
 .btn-primary {
   color: white;
-  background-color: var(--yellow);
-  border-color: var(--yellow);
+  background-color: #d49e07;
+  border-color: #d49e07;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
@@ -67,8 +64,8 @@ h6 {
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
   color: white;
-  background-color: #fec503;
-  border-color: #f6bf01;
+  background-color: #a37905;
+  border-color: #997205;
 }
 .btn-primary:active,
 .btn-primary.active,
@@ -90,17 +87,17 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  background-color: var(--yellow);
-  border-color: var(--yellow);
+  background-color: #d49e07;
+  border-color: #d49e07;
 }
 .btn-primary .badge {
-  color: var(--yellow);
+  color: #d49e07;
   background-color: white;
 }
 .btn-xl {
   color: white;
-  background-color: var(--yellow);
-  border-color: var(--yellow);
+  background-color: #d49e07;
+  border-color: #d49e07;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
@@ -114,8 +111,8 @@ fieldset[disabled] .btn-primary.active {
 .btn-xl.active,
 .open .dropdown-toggle.btn-xl {
   color: white;
-  background-color: #fec503;
-  border-color: #f6bf01;
+  background-color: #a37905;
+  border-color: #997205;
 }
 .btn-xl:active,
 .btn-xl.active,
@@ -137,11 +134,11 @@ fieldset[disabled] .btn-xl:active,
 .btn-xl.disabled.active,
 .btn-xl[disabled].active,
 fieldset[disabled] .btn-xl.active {
-  background-color: var(--yellow);
-  border-color: var(--yellow);
+  background-color: #d49e07;
+  border-color: #d49e07;
 }
 .btn-xl .badge {
-  color: var(--yellow);
+  color: #d49e07;
   background-color: white;
 }
 .navbar-default {
@@ -149,28 +146,28 @@ fieldset[disabled] .btn-xl.active {
   border-color: transparent;
 }
 .navbar-default .navbar-brand {
-  color: var(--yellow);
+  color: #d49e07;
   font-family: "Kaushan Script", "Helvetica Neue", Helvetica, Arial, cursive;
 }
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus,
 .navbar-default .navbar-brand:active,
 .navbar-default .navbar-brand.active {
-  color: #fec503;
+  color: #a37905;
 }
 .navbar-default .navbar-collapse {
   border-color: rgba(255, 255, 255, 0.02);
 }
 .navbar-default .navbar-toggle {
-  background-color: var(--yellow);
-  border-color: var(--yellow);
+  background-color: #d49e07;
+  border-color: #d49e07;
 }
 .navbar-default .navbar-toggle .icon-bar {
   background-color: white;
 }
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
-  background-color: var(--yellow);
+  background-color: #d49e07;
 }
 .navbar-default .nav li a {
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -181,18 +178,18 @@ fieldset[disabled] .btn-xl.active {
 }
 .navbar-default .nav li a:hover,
 .navbar-default .nav li a:focus {
-  color: var(--yellow);
+  color: #d49e07;
   outline: none;
 }
 .navbar-default .navbar-nav > .active > a {
   border-radius: 0;
   color: white;
-  background-color: var(--yellow);
+  background-color: #d49e07;
 }
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
   color: white;
-  background-color: #fec503;
+  background-color: #a37905;
 }
 @media (min-width: 768px) {
   .navbar-default {
@@ -288,11 +285,13 @@ section h3.section-subheading {
   font-weight: 400;
   margin-bottom: 75px;
 }
-@media (min-width: 768px) {
-  section {
-    padding: 150px 0;
-  }
+/*
+@media(min-width:768px) {
+	section {
+		padding: 150px 0;
+	}
 }
+*/
 .service-heading {
   margin: 15px 0;
   text-transform: none;
@@ -308,7 +307,7 @@ section h3.section-subheading {
   margin: 0 auto;
 }
 #portfolio .portfolio-item .portfolio-link .portfolio-hover {
-  background: rgba(254, 209, 54, 0.9);
+  background: rgba(212, 158, 7, 0.9);
   position: absolute;
   width: 100%;
   height: 100%;
@@ -416,7 +415,7 @@ section h3.section-subheading {
   height: 80px;
   position: absolute;
   z-index: 100;
-  background-color: var(--yellow);
+  background-color: #d49e07;
   color: white;
   border-radius: 100%;
   border: 7px solid #f1f1f1;
@@ -571,7 +570,7 @@ section#contact .form-group textarea.form-control {
   height: 236px;
 }
 section#contact .form-control:focus {
-  border-color: var(--yellow);
+  border-color: #d49e07;
   box-shadow: none;
 }
 section#contact ::-webkit-input-placeholder {
@@ -640,7 +639,7 @@ ul.social-buttons li a {
 ul.social-buttons li a:hover,
 ul.social-buttons li a:focus,
 ul.social-buttons li a:active {
-  background-color: var(--yellow);
+  background-color: #d49e07;
 }
 .btn:focus,
 .btn:active,
@@ -719,11 +718,11 @@ ul.social-buttons li a:active {
 }
 ::-moz-selection {
   text-shadow: none;
-  background: var(--yellow);
+  background: #d49e07;
 }
 ::selection {
   text-shadow: none;
-  background: var(--yellow);
+  background: #d49e07;
 }
 img::selection {
   background: transparent;
@@ -732,5 +731,5 @@ img::-moz-selection {
   background: transparent;
 }
 body {
-  webkit-tap-highlight-color: var(--yellow);
+  webkit-tap-highlight-color: #d49e07;
 }
