--- a/less/agency.less
+++ b/less/agency.less
@@ -230,7 +230,11 @@ section {
 		margin-bottom: 75px;
     }
 }
-
+.center-content {
+	display:flex;
+	justify-content:center;
+	align-items:center;
+}
 @media(min-width:768px) {
 	section {
 		padding: 65px 0;
